Fixed Hex alignment issue

--- a/src/Styles/Experience.css
+++ b/src/Styles/Experience.css
@@ -76,8 +76,7 @@
   width: calc(var(--s)/2 + var(--m));
   float: left;
   height: 120%;
-  shape-outside: repeating-linear-gradient(#0000 0 calc(var(--f) - 3px),
-      #000 0 var(--f));
+  shape-outside: repeating-linear-gradient(transparent 0 calc(var(--f) - 3px), #000 0 var(--f));
 }
 
 
